--- a/src/assets/scss/themes/_default.scss
+++ b/src/assets/scss/themes/_default.scss
@@ -7,11 +7,11 @@ $default-theme: (
     'elv': $c-lightest,
     'elv-up': $c-lighter,
     'elv-down': $c-lightest,
-    'elv-mute': $c-lightest,
-    'soft': $c-lighter,
-    'soft-up': $c-lightest,
+    'elv-mute': $c-light,
+    'soft': $c-white,
+    'soft-up': $c-light,
     'soft-down': $c-lightest,
-    'soft-mute': $c-lightest,
+    'soft-mute': $c-gray-70,
     'alt': $c-gray-10,
   ),
   'neutral': $c-lightest,
@@ -20,7 +20,7 @@ $default-theme: (
     '1': $c-dark,
     '2': $c-darker,
     '3': $c-darkest,
-    'inverse-1': $c-lightest,
+    'inverse-1': $c-light,
     'inverse-2': $c-lighter,
     'inverse-3': $c-lightest,
     'dark': $c-dark,
