✨ feat(the-list): add dashboard list with task cards layout

--- a/src/assets/scss/abstracts/variables/_colors.scss
+++ b/src/assets/scss/abstracts/variables/_colors.scss
@@ -28,7 +28,7 @@ $c-black: #000000;
 $c-success: #5dc90a;
 $c-danger: #e62737;
 $c-warning: #ff9f10;
-$c-info: #49b9f1;
+$c-info: #3965ff;
 $c-loving: #e56ecc;
 $c-neutral: #e0e3f0;
 
