--- a/src/assets/scss/abstracts/variables/_themes.scss
+++ b/src/assets/scss/abstracts/variables/_themes.scss
@@ -25,6 +25,7 @@ $theme-colors: (
   'success': $c-success,
   'danger': $c-danger,
   'warning': $c-warning,
+  'info': $c-info,
   'loving': $c-loving,
   'gray': $c-gray-40,
 );
