--- a/src/assets/scss/_normalize.scss
+++ b/src/assets/scss/_normalize.scss
@@ -38,7 +38,21 @@ body {
   outline: inherit;
 }
 
-:where(input) {
+:where(input, textarea) {
+  font-family:
+    'DM Sans',
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
+    sans-serif;
+
   &:focus {
     border: none;
     outline: none;
@@ -60,4 +74,28 @@ body {
   line-height: inherit;
   color: inherit;
   white-space: normal;
+}
+
+:where(h1) {
+  font-size: 1.5rem;
+}
+
+:where(h2) {
+  font-size: 1.25rem;
+}
+
+:where(h3) {
+  font-size: 1rem;
+}
+
+:where(h4) {
+  font-size: 0.875rem;
+}
+
+:where(h5) {
+  font-size: 0.75rem;
+}
+
+:where(h6) {
+  font-size: 0.625rem;
 }
