✨ feat(axios): add api call to get list of todos and create call to new todo modal

--- a/src/assets/scss/themes/_default.scss
+++ b/src/assets/scss/themes/_default.scss
@@ -20,9 +20,9 @@ $default-theme: (
     '1': $c-dark,
     '2': $c-darker,
     '3': $c-darkest,
-    'inverse-1': $c-light,
-    'inverse-2': $c-lighter,
-    'inverse-3': $c-lightest,
+    'inverse-1': $c-white,
+    'inverse-2': $c-light,
+    'inverse-3': $c-lighter,
     'dark': $c-dark,
     'light': $c-lightest,
   ),
